--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ ipywidgets==8.1.1
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.2
+joblib==1.3.2
 json5==0.9.14
 jsonpointer==2.4
 jsonschema==4.19.2
@@ -82,12 +83,15 @@ requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.12.0
+scikit-learn==1.3.2
+scipy==1.11.3
 Send2Trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
 stack-data==0.6.3
 terminado==0.18.0
+threadpoolctl==3.2.0
 tinycss2==1.2.1
 tornado==6.3.3
 traitlets==5.13.0
